# babbling_playground

./: README.md
gazebo/: CMakeLists.txt  README.md  package.xml
gazebo/launch/: simulation.launch  view_robot.launch
gazebo/launch/include/: load_robot.launch  spawn_static_camera.launch
gazebo/scripts/: datasets.py  mirror_babbling.py  neural_net.py
gazebo/urdf/: foxglove_box.urdf  kinect.urdf.xacro  robot.xacro
